--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -487,6 +487,7 @@
                                                     <li class="@(ViewBag.SegundoNivel == "estatus_solicitudes_mm" ? "current-page" : null )"><a href="@Url.Action("Estatus", "SCDM_solicitud")">Estatus</a></li>
                                                     <li class="@(ViewBag.SegundoNivel == "materiales_x_solicitud_mm" ? "current-page" : null )"><a href="@Url.Action("MaterialesPorSolicitud", "SCDM_solicitud")">Materiales por solicitud</a></li>
                                                     <li class="@(ViewBag.SegundoNivel == "materiales_x_solicitud_mm" ? "current-page" : null )"><a target="_blank" href="https://app.powerbi.com/links/H21rLUI_oU?ctid=7370fc8f-4ead-4668-a3a4-ffb467f9374a&pbi_source=linkShare">Estadísticas</a></li>
+                                                    <li class="@(ViewBag.SegundoNivel == "reporte_vencimientos" ? "current-page" : null )"><a href="@Url.Action("ReporteVencimientos", "SCDM_solicitud")">Reporte de Vencimientos</a></li>
                                                 }
                                                 <h3>Extras</h3>
                                                 <li class="@(ViewBag.SegundoNivel == "Manual" ? "current-page" : null )"><a href="@Url.Action("ManualUsuario", "SCDM_solicitud")" target="_blank">Manual de Usuario</a></li>
